--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
+    "@phosphor-icons/react": "^2.1.10",
     "@react-google-maps/api": "^2.20.6",
+    "@tabler/icons-react": "^3.33.0",
     "axios": "^1.9.0",
+    "lucide-react": "^0.511.0",
     "openai": "^5.0.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
